--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "json-server --watch db.json --port 3333"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
